--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -26,13 +26,13 @@
                 <td>
                     <div class="d-inline-flex justify-content-center">
                         <a class="btn btn-success mx-1" asp-page="/Articoli/Modify" asp-route-Id="@Item.Id">
-                            <img src="images/Edit-Validated-icon.png" alt="Modify"/>
+                            <img src="~/images/Edit-Validated-icon.png" alt="Modify"/>
                         </a>
                         <a class="btn btn-danger mx-1" asp-page="/Articoli/Delete" asp-route-Id="@Item.Id">
-                            <img src="images/Actions-edit-delete-icon.png" alt="Delete"/>
+                            <img src="~/images/Actions-edit-delete-icon.png" alt="Delete"/>
                         </a>
                         <a class="btn btn-success mx-1" asp-page="/Ricette/Index" asp-route-Id="@Item.Id">
-                            <img src="images/Things-Book-icon.png" alt="Open"/>
+                            <img src="~/images/Things-Book-icon.png" alt="Open"/>
                         </a>
                     </div>
                 </td>
