--- a/Pages/Ricette/Index.cshtml
+++ b/Pages/Ricette/Index.cshtml
@@ -6,6 +6,7 @@
 }
 <div class="container">
     <h3>Elenco Ricette Articolo @ViewData["Id"]: @ViewData["Articolo"]</h3>
+    <div class="bg-warning bg-opacity-50"><p class="p-1">Parametri Ricetta per Azotatura:</p></div>
     <form method="post" asp-page-handler="ModifyRicAzoto">
         <div asp-validation-summary="All"></div>
         <input type="text" asp-for="NewRicAzoto.ArticoloId" value="@ViewData["Id"]" hidden/>
@@ -29,6 +30,8 @@
             <button class="btn btn-success" type="submit">Salva Ricetta Azoto</button>
         </div>
     </form>
+    
+    <div class="bg-warning bg-opacity-50"><p class="p-1">Parametri Ricetta per Forni:</p></div>
     <form class="my-3" method="post" asp-page-handler="ModifyRicForno">
         <div asp-validation-summary="All"></div>
         <input type="number" asp-for="NewRicForno.ArticoloId" value="@ViewData["Id"]" hidden/>
