--- a/Pages/Articoli/Create.cshtml
+++ b/Pages/Articoli/Create.cshtml
@@ -8,13 +8,29 @@
     <form method="post" class="card p-3">
         <div class="row">
             <div asp-validation-summary="All"></div>
+            <div class="mb-0 align-middle">
+                <label class="col-form-label" asp-for="NewArticolo.Articolo"></label>
+                <input class="me-3" type="text" asp-for="NewArticolo.Articolo"/>
+                <label class="col-form-label" asp-for="NewArticolo.Note"></label>
+                <textarea class="me-3" asp-for="NewArticolo.Note"></textarea>
+            </div>
         </div>
-        <div class="mb-0 align-middle">
-            <label class="col-form-label" asp-for="NewArticolo.Articolo">Articolo:</label>
-            <input class="me-3" type="text" asp-for="NewArticolo.Articolo"/>
-            <label class="col-form-label" asp-for="NewArticolo.Note">Note:</label>
-            <textarea class="me-3" asp-for="NewArticolo.Note"></textarea>
-            <button class="btn btn-primary" type="submit">Aggiungi</button>
+        <div class="row">
+            <div class="mb-0 align-middle">
+                <div class="form-check form-check-inline form-switch">
+                    <input class="form-check-input" type="checkbox" id="Switch1" asp-for="NewArticolo.Talco"/>
+                    <label class="form-check-label" for="Switch1" asp-for="NewArticolo.Talco"></label>
+                </div>
+                <div class="form-check form-check-inline form-switch">
+                    <input class="form-check-input" type="checkbox" id="Switch2" asp-for="NewArticolo.Silicone"/>
+                    <label class="form-check-label" for="Switch2" asp-for="NewArticolo.Silicone"></label>
+                </div>
+                <div class="form-check form-check-inline form-switch">
+                    <input class="form-check-input" type="checkbox" id="Switch3" asp-for="NewArticolo.Teflon"/>
+                    <label class="form-check-label" for="Switch3" asp-for="NewArticolo.Teflon"></label>
+                </div>
+                <button class="btn btn-primary" type="submit">Aggiungi</button>
+            </div>
         </div>
     </form>
 </div>
