--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -1,4 +1,5 @@
 ﻿@page
+@using Microsoft.AspNetCore.Mvc.Formatters
 @model IndexModel
 @{
     ViewData["Title"] = "Home Page";
@@ -7,21 +8,25 @@
 <div class="text-center">
     <h1 class="display-4">Welcome To Recipe</h1>
     <p>Tabella Riepilogativa Articoli</p>
-    <table class="table table-bordered mt-3">
+    <table class="table table-bordered table-hover mt-3">
         <thead class="table-light">
         <tr>
-            <th>Indice</th>
             <th>Articolo</th>
+            <th style="width: 20%">Opzioni<br/>Talcati - Siliconati - Teflonati</th>
             <th>Note</th>
-            <th style="width: 30%">Comandi</th>
+            <th style="width: 20%">Comandi</th>
         </tr>
         </thead>
         <tbody>
         @foreach (var Item in Model.ListaArticoli)
         {
             <tr>
-                <td>@Item.Id</td>
                 <td>@Item.Articolo</td>
+                <td>
+                    <input class="form-check-input" type="checkbox" disabled checked=@Item.Talco/>
+                    <input class="form-check-input ms-3" type="checkbox" disabled checked=@Item.Silicone/>
+                    <input class="form-check-input ms-3" type="checkbox" disabled checked=@Item.Teflon/>
+                </td>
                 <td>@Item.Note</td>
                 <td>
                     <div class="d-inline-flex justify-content-center">
